<resources>
    <string name="app_name">remindr</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="remind_me_">remind me..</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="bell">bell</string>
    <string name="repeat">repeat</string>
    <string name="add">add</string>
    <string name="clock">clock</string>
    <string name="calendar">calendar</string>
    <string name="hint">remind me...</string>
    <string name="tagicon">tagicon</string>
    <string name="_00_00">00:00</string>
    <string name="before">before</string>
    <string name="_0">0</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat2">Repeat</string>
    <string name="tag">Tag</string>
    <string-array name="tag_choices">
            <item>General</item>
            <item>Birthday</item>
            <item>Work</item>
            <item>Personal</item>
            <item>Health</item>
    </string-array>
    <string name="repeat3">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="Every">Every</string>
    <string name="no_reminders">There are no Reminders!</string>
    <string name="addReminder">Add a Reminder!</string>
    <string name="action_discard_reminder">discard reminder</string>
    <string name="action_save_reminder">save reminder</string>
    <string name="menu">Menu</string>
    <string name="_8942">⋮</string>
    <string name="coloricon">coloricon</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="vibration">Vibration</string>
    <string name="ringtone">RingTone</string>

</resources>
