<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F6FC"
        tools:context=".AddReminderActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/add_reminder_layout_top"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_height="200dp">
    <EditText
            android:id="@+id/remind_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal|top"
            android:inputType="textAutoCorrect"
            android:hint="@string/hint"
            style="@style/remind_me"
            tools:ignore="LabelFor"
            android:autofillHints="@string/remind_me_"/>
    </LinearLayout>

    <ImageButton
            android:id="@+id/calendarbutton"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="260dp"
            android:background="@drawable/calendarbutton"
            android:contentDescription="@string/calendar"/>
    <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="260dp"
            android:text="@string/date"
            android:textAppearance="@style/dark"
            android:gravity="center_horizontal|top"/>
    <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="295dp"
            android:text="@string/_00_00_00"
            android:textAppearance="@style/palegrey"
            android:gravity="center_horizontal|top"/>
    <ImageButton
            android:id="@+id/clockbutton"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="340dp"
            android:background="@drawable/clock"
            android:contentDescription="@string/clock"/>
    <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="94dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="340dp"
            android:text="@string/time"
            android:textAppearance="@style/dark"
            android:gravity="center_horizontal|top"/>
    <TextView
            android:id="@+id/clocktext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="377dp"
            android:text="@string/_00_00"
            android:textAppearance="@style/palegrey"
            android:gravity="center_horizontal|top"/>
    <ImageButton
            android:id="@+id/repeatbutton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="420dp"
            android:background="@drawable/history2"
            android:contentDescription="@string/repeat"/>
    <TextView
            android:id="@+id/repeattext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="94dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="420dp"
            android:text="@string/repeat2"
            android:textAppearance="@style/dark"
            android:gravity="center_horizontal|top"/>

    <Spinner
            android:id="@+id/repeatchoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="455dp"
            android:prompt="@array/repeatchoices"
            android:textAppearance="@style/dark"/>
    <ImageButton
            android:id="@+id/tagbutton"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="500dp"
            android:background="@drawable/tag"
            android:contentDescription="@string/tagicon"/>
    <TextView
            android:id="@+id/tagtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="94dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="500dp"
            android:text="@string/tag"
            android:textAppearance="@style/dark"
            android:gravity="center_horizontal|top"/>
    <Spinner
            android:id="@+id/tagchoices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="530dp"
            android:layout_marginStart="46dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:prompt="@array/tag_choices"
            android:textAppearance="@style/dark"
            android:spinnerMode="dropdown"/>

    <ImageButton
            android:id="@+id/addbutton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="180dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="560dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/add"/>

</RelativeLayout>